--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wil-playground
   labels:
-    name: wil-playground
+    app: wil-playground
+  name: wil-playground
 spec:
   ports:
-    - port: 8888
-      targetPort: 8888
+  - nodePort: 30080
+    port: 8888
+    protocol: TCP
+    targetPort: 8888
   selector:
     app: wil-playground
+  type: NodePort
